--- a/WebContent/accommodationLists/accommodationDetail.html
+++ b/WebContent/accommodationLists/accommodationDetail.html
@@ -59,12 +59,12 @@
                 <div class="main-img">
                     <img src = "/images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/신라스테이_삼성_메인.png" alt= "신라스테이 삼성"><br>
                 </div>
-                <div class="cliper-btn prev-btn">
+                <!-- <div class="cliper-btn prev-btn">
                     <i class="fas fa-angle-left"></i>
                 </div>
                 <div class="cliper-btn next-btn">
                     <i class="fas fa-angle-right"></i>
-                </div>
+                </div> -->
                 <div class="cliper">
                     <ul>
                         <li class="current"><img src="/images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/신라스테이_삼성_메인.png"></li>
@@ -108,8 +108,8 @@
             <h1>객실 안내 및 예약</h1>
             <div class='dateChange'>
                 <p>예약 날짜</p>
-                <input type="date" name="start-date" class="form-option date start-date" required> ~ 
-                <input type="date" name="end-date" class="form-option date end-date" required>
+                <input type="date" name="start-date" class="form-option date start-date" name="start-date" required> ~ 
+                <input type="date" name="end-date" class="form-option date end-date" name="end-date" required>
             </div>
             <form class="room-form">
                 <section>
