--- a/WebContent/admin/accommodations/applyList.html
+++ b/WebContent/admin/accommodations/applyList.html
@@ -97,7 +97,7 @@
                         <div class="main-search">
                             <h1>업체 등록 관리</h1>
                             <form action="">
-                                <select name="" class="acc-catagory">
+                                <select name="acc-type" class="acc-catagory">
                                     <option value="" selected disabled>전체보기</option>
                                     <option value="호텔">호텔</option>
                                     <option value="모텔">모텔</option>
@@ -105,7 +105,7 @@
                                     <option value="리조트">리조트</option>
                                     <option value="펜션">펜션</option>
                                 </select>
-                                <input type="text">
+                                <input type="text" name="search">
                                 <input type="submit" value="검색">
                             </form>
                         </div>
