admin user and company list mod

--- a/WebContent/admin/userInfo/users/privateMemberdetail.html
+++ b/WebContent/admin/userInfo/users/privateMemberdetail.html
@@ -55,8 +55,14 @@
                         </ul>
                     </div>
 
-                    <div class="user-info-member">
-                        <h1>김병준 님 <i class="fas fa-gem" style="color: dimgrey;"></i></h1>
+                    <div class="user-info">
+                        <div class="user-info-member">
+                            <h1>김병준 님 <i class="fas fa-gem" style="color: dimgrey;"></i></h1>
+                        </div>
+                        <div>
+                            <img src="../../../images/logo.png" alt="">
+                            <input type="button" value="사진 변경하기">
+                        </div>
                     </div>
                     <!-- 다이아몬드 이런건 나중에 스크립트로 요청 정보 읽어서 등급에 맞게 클래스 이름만 setAttribute 해주면 될듯 -->
                     <div class="list-board">
