--- a/WebContent/user/review/reg.html
+++ b/WebContent/user/review/reg.html
@@ -65,7 +65,7 @@
                     <ul class="breadcrumb-list">
                         <li><i class="fas fa-home"></i>&nbsp;&nbsp;HOME&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i> </li>
                         <li>&nbsp;&nbsp;&nbsp;마이페이지&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i> </li>
-                        <li>&nbsp;&nbsp;&nbsp;예약관리</li>
+                        <li>&nbsp;&nbsp;&nbsp;리뷰등록</li>
                     </ul>
                 </div>
                 <section class="review-sec">
@@ -84,7 +84,7 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <div class="comment-container">
-                            <textarea name="" id="" cols="47" rows="7" class="comment" placeholder="여러분의 리뷰를 귀 기울이겠습니다."></textarea>
+                            <textarea name="" id="" cols="47" rows="7" class="comment"></textarea>
                         </div>
                         <div class="submit-btn-container">
                             <input type="submit" class="submit-btn" value="리뷰 등록">
