--- a/WebContent/event/list.html
+++ b/WebContent/event/list.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+    <script src="/js/event/list.js"></script>
     <title>TEUM | 틈을 채우다</title>
 </head>
 <body>
@@ -68,10 +69,10 @@
                 </div>
                 <section class="event-sec">
                     <h1>이벤트 / <span>Event</span></h1>
-                    <ul class="event-list">
+                    <!-- <ul class="event-list">
                         <li class="current-tab"><a href="">진행중인 이벤트</a></li>
                         <li><a href="">종료된 이벤트</a></li>
-                    </ul>
+                    </ul> -->
                     <div class="event-img-container">
                         <h1>세스코 인증 청결 숙소 이벤트에 참여해 보세요!</h1>
                         <h2>2020.01.01 ~ 2020.12.31</h2>
@@ -90,7 +91,30 @@
                         <h1>안전여행 떠나고 10만원 상품권 획득기회!</h1>
                         <h2>2020.01.01 ~ 2020.12.31</h2>
                         <div class="scale">
-                            <a href=""><img src="/images/event/event3.png" alt=""></a>
+                            <a href="">
+                                <img class="event-end" src="/images/event/event3.png" alt="">
+                                <h1 class="event-end-ment">종료된 이벤트입니다.</h1>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="pager-container">
+                        <div class="btn btn-prev">
+                            <span><a href="">이전</a></span>
+                        </div>
+                        <ul class="pager-list">
+                            <li class="active-page"><a href="">1</a></li>
+                            <li><a href="">2</a></li>
+                            <li><a href="">3</a></li>
+                            <li><a href="">4</a></li>
+                            <li><a href="">5</a></li>
+                            <li><a href="">6</a></li>
+                            <li><a href="">7</a></li>
+                            <li><a href="">8</a></li>
+                            <li><a href="">9</a></li>
+                            <li><a href="">10</a></li>
+                        </ul>
+                        <div class="btn btn-next">
+                            <span><a href="">다음</a></span>
                         </div>
                     </div>
                 </section>
