--- a/WebContent/company/accommodation/detail.html
+++ b/WebContent/company/accommodation/detail.html
@@ -6,9 +6,9 @@
     <title>신라스테이 삼성</title>
     <link rel="stylesheet" href="/css/reset.css" type="text/css">
     <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/css/company/accommodation/detail.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
-    <link href="/css/company/accommodation/detail.css"  rel="stylesheet">
     <script src="/js/accommodationLists/accommodationDetail.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 </head>
@@ -16,9 +16,9 @@
 
 <body>
     <header class="sec-header-page">
-        <section class="header-sec pcHeader">
+        <section class="header-sec">
             <div class="header-logo">
-                <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
+                <h1><a class="teum-logo" href="/index">틈</a></h1>
             </div>
             <div>
                 <ul class="main-menu">
@@ -29,8 +29,8 @@
                         <a href="">더보기</a>
                         <div class="mega-menu">
                             <ul>
-                                <li><a href="">공지사항</a></li>
-                                <li><a href="">이벤트</a></li>
+                                <li><a href="/notice/list">공지사항</a></li>
+                                <li><a href="/event/list">이벤트</a></li>
                                 <li><a href="">1:1 문의</a></li>
                             </ul>
                         </div>
@@ -54,7 +54,7 @@
 
         
     <div class="main">
-        <section class='title'>
+        <section class="title">
             <div class="pic">
                 <div class="main-img">
                     <img src = "/images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/메인.png" alt= "신라스테이 삼성"><br>
@@ -113,8 +113,8 @@
                 <li>&nbsp;&nbsp;/&nbsp;&nbsp;</li>
                 <li class="review">리뷰</li>
                 </ul>
-                <input type="date" name="start-date" class="form-option date start-date" name="start-date" required> ~ 
-                <input type="date" name="end-date" class="form-option date end-date" name="end-date" required>
+                <input type="date" name="start-date" class="form-option date start-date" required> ~ 
+                <input type="date" name="end-date" class="form-option date end-date" required>
             </div>
             <form class="room-form">
                 <section>
