숙소등록 추가

--- a/WebContent/user/offer/reg.html
+++ b/WebContent/user/offer/reg.html
@@ -17,19 +17,19 @@
     <header class="sec-header-page">
         <section class="header-sec pcHeader">
             <div class="header-logo">
-                <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
+                <h1><a class="teum-logo" href="/index">틈</a></h1>
             </div>
             <div>
                 <ul class="main-menu">
                     <li class="header-search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
-                    <li><a href="">제안하기</a></li>
+                    <li><a href="reg">제안하기</a></li>
                     <li><a href="">예약내역</a></li>
                     <li class="sub-page">
                         <a href="">더보기</a>
                         <div class="mega-menu">
                             <ul>
-                                <li><a href="">공지사항</a></li>
-                                <li><a href="">이벤트</a></li>
+                                <li><a href="/notice/list">공지사항</a></li>
+                                <li><a href="/event/list">이벤트</a></li>
                                 <li><a href="">1:1 문의</a></li>
                             </ul>
                         </div>
@@ -41,7 +41,7 @@
                                 <li><a href="">내정보</a></li>
                                 <li><a href="">제안내역</a></li>
                                 <li><a href="">찜한 숙소</a></li>
-                                <li><a href="">로그아웃</a></li>
+                                <li><a href="/logout">로그아웃</a></li>
                             </ul>
                         </div>
                     </li>
@@ -69,7 +69,7 @@
                 </div>
 
                 <section class="reg-form-sec">
-                    <form action="" method="post" class="reg-form">
+                    <form action="reg" method="post" class="reg-form">
                         <div>
                             <section>
                                 <i class="far fa-calendar-alt"></i><span>&nbsp;&nbsp;&nbsp;&nbsp;날짜&nbsp;&nbsp;&nbsp;</span> 
@@ -79,77 +79,77 @@
                             <section>
                                 <i class="fas fa-map-marker-alt"></i><span>&nbsp;&nbsp;&nbsp;&nbsp;지역&nbsp;&nbsp;&nbsp;&nbsp;</span>
                                 <select class="form-option main-city">
-                                    <option name="seoul">서울</option>
-                                    <option name="busan">부산</option>
-                                    <option name="jeju">제주</option>
-                                    <option name="gyeonggi">경기</option>
-                                    <option name="incheon">인천</option>
-                                    <option name="gangwon">강원</option>
-                                    <option name="gyeongsang">경상</option>
-                                    <option name="jeonla">전라</option>
-                                    <option name="chungcheong">충청</option>
+                                    <option name="서울">서울</option>
+                                    <option name="부산">부산</option>
+                                    <option name="제주">제주</option>
+                                    <option name="경기">경기</option>
+                                    <option name="인천">인천</option>
+                                    <option name="강원">강원</option>
+                                    <option name="경상">경상</option>
+                                    <option name="전라">전라</option>
+                                    <option name="충청">충청</option>
                                 </select>
                                 <select class="form-option sub-city">
-                                    <option name="sub-option" selected>강남/역삼/삼성</option>
-                                    <option name="sub-option">신사/청담/압구정</option>
-                                    <option name="sub-option">서초/교대/사당</option>
-                                    <option name="sub-option">잠실/송파/강동</option>
-                                    <option name="sub-option">을지로/명동/중구</option>
-                                    <option name="sub-option">서울역/이태원/용산</option>
-                                    <option name="sub-option">종로/인사동</option>
-                                    <option name="sub-option">동대문구</option>
-                                    <option name="sub-option">홍대/합정/마포/서대문</option>
-                                    <option name="sub-option">여의도</option>
-                                    <option name="sub-option">영등포역</option>
-                                    <option name="sub-option">구로/신도림/금천</option>
-                                    <option name="sub-option">김포공항/염창/강서</option>
-                                    <option name="sub-option">건대입구/성수/왕십리</option>
-                                    <option name="sub-option">성북/강북/노원/도봉</option>
+                                    <option value="" selected>강남/역삼/삼성</option>
+                                    <option value="">신사/청담/압구정</option>
+                                    <option value="">서초/교대/사당</option>
+                                    <option value="">잠실/송파/강동</option>
+                                    <option value="">을지로/명동/중구</option>
+                                    <option value="">서울역/이태원/용산</option>
+                                    <option value="">종로/인사동</option>
+                                    <option value="">동대문구</option>
+                                    <option value="">홍대/합정/마포/서대문</option>
+                                    <option value="">여의도</option>
+                                    <option value="">영등포역</option>
+                                    <option value="">구로/신도림/금천</option>
+                                    <option value="">김포공항/염창/강서</option>
+                                    <option value="">건대입구/성수/왕십리</option>
+                                    <option value="">성북/강북/노원/도봉</option>
                                 </select>
                             </section>
                             <section>
                                 <i class="fas fa-hotel"></i><span>&nbsp;&nbsp;&nbsp;타입&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                                <select class="form-option category">
-                                    <option value="" name="">호텔</option>
-                                    <option value="" name="">모텔</option>
-                                    <option value="" name="">펜션</option>
-                                    <option value="" name="">리조트</option>
-                                    <option value="" name="">게스트하우스</option>
+                                <select name="acc-type" class="form-option category">
+                                    <option value="호텔">호텔</option>
+                                    <option value="모텔">모텔</option>
+                                    <option value="펜션">펜션</option>
+                                    <option value="리조트">리조트</option>
+                                    <option value="게스트하우스">게스트하우스</option>
                                 </select>
                             </section>
                             <section>
                                 <i class="fas fa-user"></i><span>&nbsp;&nbsp;&nbsp;인원수&nbsp;</span>
-                                <select class="form-option people-select">
-                                    <option value="" name="people">1</option>
-                                    <option value="" name="people" selected>2</option>
-                                    <option value="" name="people">3</option>
-                                    <option value="" name="people">4</option>
-                                    <option value="" name="people">5</option>
-                                    <option value="" name="people">6</option>
-                                    <option value="" name="people">7</option>
-                                    <option value="" name="people">8</option>
-                                    <option value="" name="people">9</option>
-                                    <option value="" name="people">10</option>
-                                    <option value="" name="people">11</option>
-                                    <option value="" name="people">12</option>
-                                    <option value="" name="people">13</option>
-                                    <option value="" name="people">14</option>
-                                    <option value="" name="people">15</option>
-                                    <option value="" name="people">16</option>
-                                    <option value="" name="people">17</option>
-                                    <option value="" name="people">18</option>
-                                    <option value="" name="people">19</option>
-                                    <option value="" name="people">20</option>
+                                <select name="headcount" class="form-option people-select">
+                                    <option value="">1</option>
+                                    <option value="" selected>2</option>
+                                    <option value="">3</option>
+                                    <option value="">4</option>
+                                    <option value="">5</option>
+                                    <option value="">6</option>
+                                    <option value="">7</option>
+                                    <option value="">8</option>
+                                    <option value="">9</option>
+                                    <option value="">10</option>
+                                    <option value="">11</option>
+                                    <option value="">12</option>
+                                    <option value="">13</option>
+                                    <option value="">14</option>
+                                    <option value="">15</option>
+                                    <option value="">16</option>
+                                    <option value="">17</option>
+                                    <option value="">18</option>
+                                    <option value="">19</option>
+                                    <option value="">20</option>
                                 </select>
                             </section>
                             <section>
                                 <i class="fas fa-won-sign"></i><span>&nbsp;&nbsp;&nbsp;가격&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                                <input type="text" class="form-option price-input" placeholder="원(￦) 단위로 입력해 주세요" required>
+                                <input type="text" name="price" class="form-option price-input" placeholder="원(￦) 단위로 입력해 주세요" required>
                             </section>
                         </div>
                         <section class="submit-btn-sec">
                             <input type="submit" class="btn submit-btn" value="제안하기" />
-                            <a href="" class="btn cancel-btn">돌아가기</a>
+                            <a href="/index" class="btn cancel-btn">돌아가기</a>
                         </section>
                     </form>
                 </section>
