--- a/WebContent/admin/index.html
+++ b/WebContent/admin/index.html
@@ -16,23 +16,12 @@
     <header class="sec-header-page">
         <section class="header-sec pcHeader">
             <div class="header-logo">
-                <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
+                <h1><a class="teum-logo" href="index">틈</a></h1>
             </div>
             <div>
                 <ul class="main-menu">
-                    <li class="header_search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
-                    <li><a href="">제안하기</a></li>
-                    <li><a href="">예약내역</a></li>
-                    <li><a href="">더보기</a></li>
-                    <li class="mypage"><a href="">로그인</a>
-                        <div class="mega-menu">
-                            <ul>
-                                <li><a href="">내정보</a></li>
-                                <li><a href="">제안내역</a></li>
-                                <li><a href="">찜한 숙소</a></li>
-                                <li><a href="">로그아웃</a></li>
-                            </ul>
-                        </div>
+                    <li class="sub-page">
+                        <a href="">로그인</a>
                     </li>
                 </ul>
             </div>
@@ -44,7 +33,7 @@
             <ul>
                 <li><a href=""><i class="fas fa-hotel"></i><span>업체관리</span></a></li>
                 <li><a href=""><i class="fas fa-user-circle"></i><span>회원관리</span></a></li>
-                <li><a href=""><i class="far fa-calendar-alt"></i><span>프로모션관리</span></a></li>
+                <li><a href="promotion/goldenTime/list"><i class="far fa-calendar-alt"></i><span>프로모션관리</span></a></li>
                 <li><a href=""><i class="fas fa-headphones"></i><span>고객센터</span></a></li>
             </ul>
         </div>
