--- a/WebContent/admin/accommodations/detail.html
+++ b/WebContent/admin/accommodations/detail.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../css/reset.css">
 	<link rel="stylesheet" href="/css/layout.css">
 	<link rel="stylesheet" href="../../css/admin/layout.css">
-    <link rel="stylesheet" href="../../css/admin/accommodations/accommodationDetail.css">
+    <link rel="stylesheet" href="../../css/admin/accommodations/detail.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
 	<script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
@@ -99,9 +99,17 @@
 						<section class='title'>
 							<div class="pic">
 								<div class="main-img">
-									<img src = "/images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/신라스테이_삼성_메인.png" alt= "신라스테이 삼성"><br>
+									<img src = "/images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/메인.png" alt= "신라스테이 삼성"><br>
 								</div>
-								
+								<div class="cliper">
+									<ul>
+										<li class="current"><img src="/images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/메인.png"></li>
+										<li><img src="/images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/스탠다드_더블/메인.jpg"></li>
+										<li><img src="/images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/메인.png"></li>
+										<li><img src="/images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/스탠다드_트윈/메인.png" alt= "신라스테이 삼성"></li> 
+										<li><img src="/images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/메인.png"></li>
+									</ul>
+								</div>
 							</div>
 							<div class="main-info">
 								<h1>신라스테이 삼성</h1>
@@ -140,7 +148,7 @@
 									</div> -->
 									<div class="room-container">
 										<div class="room-img-container">
-											<img src="/images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/스탠다드_트윈/신라스테이_삼성_스탠다드트윈_메인.png" alt= "신라스테이 삼성">
+											<img src="/images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/스탠다드_트윈/메인.png" alt= "신라스테이 삼성">
 										</div>
 										<div class="room-detail-container">
 											<div class="room-room">
@@ -169,7 +177,7 @@
 									</div> -->
 									<div class="room-container">
 										<div class="room-img-container">
-											<img src="/images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/스탠다드_더블/신라스테이_삼성_스탠다드더블_메인.jpg">
+											<img src="/images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/스탠다드_더블/메인.jpg">
 										</div>
 										<div class="room-detail-container">
 											<div class="room-room">
