제안 등록 구현

--- a/WebContent/user/offer/reg.html
+++ b/WebContent/user/offer/reg.html
@@ -78,33 +78,43 @@
                             </section>
                             <section>
                                 <i class="fas fa-map-marker-alt"></i><span>&nbsp;&nbsp;&nbsp;&nbsp;지역&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                                <select class="form-option main-city">
-                                    <option name="서울">서울</option>
-                                    <option name="부산">부산</option>
-                                    <option name="제주">제주</option>
-                                    <option name="경기">경기</option>
-                                    <option name="인천">인천</option>
-                                    <option name="강원">강원</option>
-                                    <option name="경상">경상</option>
-                                    <option name="전라">전라</option>
-                                    <option name="충청">충청</option>
+                                <select name="main-city" class="form-option main-city">
+                                    <option value="서울">서울</option>
+                                    <option value="부산">부산</option>
+                                    <option value="제주">제주</option>
+                                    <option value="경기">경기</option>
+                                    <option value="인천">인천</option>
+                                    <option value="강원">강원</option>
+                                    <option value="경상">경상</option>
+                                    <option value="전라">전라</option>
+                                    <option value="충청">충청</option>
                                 </select>
-                                <select class="form-option sub-city">
-                                    <option value="" selected>강남/역삼/삼성</option>
-                                    <option value="">신사/청담/압구정</option>
-                                    <option value="">서초/교대/사당</option>
-                                    <option value="">잠실/송파/강동</option>
-                                    <option value="">을지로/명동/중구</option>
-                                    <option value="">서울역/이태원/용산</option>
-                                    <option value="">종로/인사동</option>
-                                    <option value="">동대문구</option>
-                                    <option value="">홍대/합정/마포/서대문</option>
-                                    <option value="">여의도</option>
-                                    <option value="">영등포역</option>
-                                    <option value="">구로/신도림/금천</option>
-                                    <option value="">김포공항/염창/강서</option>
-                                    <option value="">건대입구/성수/왕십리</option>
-                                    <option value="">성북/강북/노원/도봉</option>
+                                <select name="sub-city" class="form-option sub-city">
+                                    <option value="강남구">강남구</option>
+				                    <option value="강동구">강동구</option>
+				                    <option value="강북구">강북구</option>
+				                    <option value="강서구">강서구</option>
+				                    <option value="관악구">관악구</option>
+				                    <option value="광진구">광진구</option>
+				                    <option value="구로구">구로구</option>
+				                    <option value="금천구">금천구</option>
+				                    <option value="노원구">노원구</option>
+				                    <option value="도봉구">도봉구</option>
+				                    <option value="동대문구">동대문구</option>
+				                    <option value="동작구">동작구</option>
+				                    <option value="마포구">마포구</option>
+				                    <option value="서대문구">서대문구</option>
+				                    <option value="서초구">서초구</option>
+				                    <option value="성동구">성동구</option>
+				                    <option value="성북구">성북구</option>
+				                    <option value="송파구">송파구</option>
+				                    <option value="양천구">양천구</option>
+				                    <option value="영등포구">영등포구</option>
+				                    <option value="용산구">용산구</option>
+				                    <option value="은평구">은평구</option>
+				                    <option value="종로구">종로구</option>
+				                    <option value="중구">중구</option>
+				                    <option value="중랑구">중랑구</option>
                                 </select>
                             </section>
                             <section>
