--- a/WebContent/company/reverseOffer/detail.html
+++ b/WebContent/company/reverseOffer/detail.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+    <script src="/js/company/reverseOffer/detail.js"></script>
     <title>TEUM | 틈을 채우다</title>
 </head>
 <body>
@@ -67,60 +68,100 @@
                         <li>&nbsp;&nbsp;&nbsp;???&nbsp;&nbsp;&nbsp;</li>
                     </ul>
                 </div>
-                <section class="proposal-sec">
-                    <div class="cliper-btn prev-btn">
-                        <i class="fas fa-angle-left"></i>
-                    </div>
-                    <div class="cliper-btn next-btn">
-                        <i class="fas fa-angle-right"></i>
-                    </div>
-                    <h1>고객으로부터 받은 제안 목록</h1>  
-                    <div class="proposal-container">
-                        <div class="proposal-info">
-                            <h2>제안정보</h2>
-                            <ul>
-                                <li>
-                                    <div>날짜</div>
-                                    <div>2020-12-12 ~ 2020-12-15</div>
-                                </li>
-                                <li>
-                                    <div>위치</div>
-                                    <div>경기도 하남시</div>
-                                </li>
-                                <li>
-                                    <div>인원수</div>
-                                    <div>4</div>
-                                </li>
-                                <li>
-                                    <div>희망하는 가격</div>
-                                    <div class="wanted-price">120,000원</div>
-                                </li>
-                            </ul>
+                <div>
+                    <div class="btn-left" style="align-self: center;"><i style="font-size: 50px; color: gray; opacity: 0.5;" class="fas fa-angle-left"></i></div>
+                    <div style="width: 700px; overflow:hidden;">
+                        <div class="proposal-item-container" style="display: flex;">
+
+                            <div class="proposal-info">
+                                <h2>제안정보</h2>
+                                <ul>
+                                    <li>
+                                        <div>날짜</div>
+                                        <div>2020.12.12 ~ 2020.12.15</div>
+                                    </li>
+                                    <li>
+                                        <div>위치</div>
+                                        <div>경기도 하남시</div>
+                                    </li>
+                                    <li>
+                                        <div>인원수</div>
+                                        <div>4</div>
+                                    </li>
+                                    <li>
+                                        <div>희망하는 가격</div>
+                                        <div class="wanted-price">120,000원</div>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="proposal-info">
+                                <h2>제안정보</h2>
+                                <ul>
+                                    <li>
+                                        <div>날짜</div>
+                                        <div>2020.12.12 ~ 2020.12.15</div>
+                                    </li>
+                                    <li>
+                                        <div>위치</div>
+                                        <div>경기도 하남시</div>
+                                    </li>
+                                    <li>
+                                        <div>인원수</div>
+                                        <div>4</div>
+                                    </li>
+                                    <li>
+                                        <div>희망하는 가격</div>
+                                        <div class="wanted-price">120,000원</div>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="proposal-info">
+                                <h2>제안정보</h2>
+                                <ul>
+                                    <li>
+                                        <div>날짜</div>
+                                        <div>2020.12.12 ~ 2020.12.15</div>
+                                    </li>
+                                    <li>
+                                        <div>위치</div>
+                                        <div>경기도 하남시</div>
+                                    </li>
+                                    <li>
+                                        <div>인원수</div>
+                                        <div>4</div>
+                                    </li>
+                                    <li>
+                                        <div>희망하는 가격</div>
+                                        <div class="wanted-price">120,000원</div>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="proposal-info">
+                                <h2>제안정보</h2>
+                                <ul>
+                                    <li>
+                                        <div>날짜</div>
+                                        <div>2020.12.12 ~ 2020.12.15</div>
+                                    </li>
+                                    <li>
+                                        <div>위치</div>
+                                        <div>경기도 하남시</div>
+                                    </li>
+                                    <li>
+                                        <div>인원수</div>
+                                        <div>4</div>
+                                    </li>
+                                    <li>
+                                        <div>희망하는 가격</div>
+                                        <div class="wanted-price">120,000원</div>
+                                    </li>
+                                </ul>
+                            </div>
+                            
                         </div>
-                        <div class="proposal-info">
-                            <h2>제안정보</h2>
-                            <ul>
-                                <li>
-                                    <div>날짜</div>
-                                    <div>2020-12-07 ~ 2020-12-08</div>
-                                </li>
-                                <li>
-                                    <div>위치</div>
-                                    <div>서울시 강남구</div>
-                                </li>
-                                <li>
-                                    <div>인원수</div>
-                                    <div>3</div>
-                                </li>
-                                <li>
-                                    <div>희망하는 가격</div>
-                                    <div class="wanted-price">50,000원</div>
-                                </li>
-                            </ul>
-                        </div>
-                        
                     </div>
-                </section>
+                    <div class="btn-right" style="align-self: center;"><i style="font-size: 50px; color: gray; opacity: 0.5;" class="fas fa-angle-right"></i></div>
+                </div>
                 <section class="offer-sec">
                     <h1>고객에게 역제안을 보낸 룸 목록</h1>
                     <form class="offer-form">
