--- a/WebContent/accommodationLists/list.html
+++ b/WebContent/accommodationLists/list.html
@@ -371,7 +371,7 @@
                     </div>
                 </div>
                 <div class="snip1368">
-                    <img src="/images/company/호텔/서울/강남구/글래드라이브_강남/" alt="">
+                    <img src="/images/company/호텔/서울/강남구/글래드라이브_강남/메인.jpg" alt="">
                     <h3>예약하기</h3>
                     <figcaption>
                         <div class="icons"><a href="#"><i class="ion-social-reddit-outline"></i></a>
