역제안 구현

--- a/WebContent/company/reverseOffer/reg.html
+++ b/WebContent/company/reverseOffer/reg.html
@@ -71,7 +71,7 @@
                     <div class="btn-left" style="align-self: center;"><i style="font-size: 50px; color: gray; opacity: 0.5;" class="fas fa-angle-left"></i></div>
                     <div style="width: 700px; overflow:hidden;">
                         <div class="proposal-item-container" style="display: flex;">
-                            <div class="proposal-info">
+                            <div class="proposal-info picked">
                                 <h2>제안정보</h2>
                                 <ul>
                                     <li>
