--- a/WebContent/company/accommodation/reg.html
+++ b/WebContent/company/accommodation/reg.html
@@ -282,22 +282,24 @@
 							</select>
 							
 						</div>
-						<div class="insert-box">
-							<em style="color: red;">* </em>숙소사진1 추가  <br>
-							<input type="file" accept="image acc_image" name="file" required>
-						</div>
-						<div class="insert-box">
-							<em style="color: red;">* </em>숙소사진2 추가  <br>
-							<input type="file" accept="image acc_image" name="file" required>
+						<div class="img-box">
+							<div class="insert-box">
+								<em style="color: red;">* </em>숙소사진1 추가  <br>
+								<input type="file" accept="image acc_image" name="file" required>
+							</div>
+							<div class="insert-box">
+								<em style="color: red;">* </em>숙소사진2 추가  <br>
+								<input type="file" accept="image acc_image" name="file" required>
+							</div>
 						</div>
 						<!-- <div>
 						<em style="color: red;">*</em>사업자 등록증  
 							<input type="file" accept="image company-reg" name="company-reg" required>
 						</div> -->
-						<!-- <div class="insert-box">
+						<div class="insert-button">
 							<input type="button" class="button add-button" value="방 추가">
 							<input type="button" class="button del-button" value="방 삭제">
-						</div> -->
+						</div>
 					</form>
 				</div>
 				<div class="box">
