--- a/WebContent/company/accommodation/reg.html
+++ b/WebContent/company/accommodation/reg.html
@@ -282,15 +282,16 @@
 							</select>
 							
 						</div>
+						
+						<div class="insert-box">
+							<em style="color: red;">* </em>숙소사진1 추가  <br>
+							<input type="file" accept="image acc_image" name="file" required>
+						</div>
+						<div class="insert-box">
+							<em style="color: red;">* </em>숙소사진2 추가  <br>
+							<input type="file" accept="image acc_image" name="file" required>
+						</div>
 						<div class="img-box">
-							<div class="insert-box">
-								<em style="color: red;">* </em>숙소사진1 추가  <br>
-								<input type="file" accept="image acc_image" name="file" required>
-							</div>
-							<div class="insert-box">
-								<em style="color: red;">* </em>숙소사진2 추가  <br>
-								<input type="file" accept="image acc_image" name="file" required>
-							</div>
 						</div>
 						<!-- <div>
 						<em style="color: red;">*</em>사업자 등록증  
@@ -321,8 +322,8 @@
 							<input type="text" class="text-box bed-count" name="bed-count" placeholder="2" required>
 						</div>
 						<div>
-							<em style="color: red;">* </em>가격<br>
-							<input type="text" class="text-box price" name="price" placeholder="100000 (돈의 단위는 적지 마세요.)" required>
+							<em style="color: red;">* </em>가격(\)<br>
+							<input type="text" class="text-box price" name="price" placeholder="100000" required>
 						</div>
 						<div>
 							<em style="color: red;">* </em>방사진1 추가<br>
