--- a/WebContent/company/accommodation/reg.html
+++ b/WebContent/company/accommodation/reg.html
@@ -269,7 +269,7 @@
 						</div>
 						<div class="insert-box">
 							<em style="color: red;">* </em>상세주소<br>
-							<input type="text" class="text-box address" name="detail-address" placeholder="서울특별시 종로구 인사동길 12 대일빌딩 15층" required>
+							<input type="text" class="text-box address" name="detail-address" placeholder="인사동길 12 대일빌딩 15층" required>
 						</div>
 						<div class="insert-box">
 							<em style="color: red;">* </em>숙소유형<br>  
